-
Bug
-
Resolution: Fixed
-
P3
-
11-pool-oracle, 13, 15
-
b27
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248098 | 16 | Serguei Spitsyn | P3 | Resolved | Fixed | team |
| JDK-8334967 | 11.0.25-oracle | Ivan Bereziuk | P3 | Resolved | Fixed | b01 |
| JDK-8335319 | 11.0.25 | Martin Doerr | P3 | Resolved | Fixed | b01 |
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (t:/workspace/open/src/hotspot/share/prims/jvmtiRedefineClasses.cpp:4282), pid=158244, tid=262900
# guarantee(false) failed: OLD and/or OBSOLETE method(s) found
#
# JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-04-04-2151264.leonid.mesnik.ks-apps)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-04-04-2151264.leonid.mesnik.ks-apps, mixed mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
# Core dump will be written. Default location: T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\scratch\0\hs_err_pid158244.mdmp
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -XX:MaxRAMPercentage=6 -Dkitchensink.modules.additional=Instrumentation -XX:MaxRAMPercentage=50 -XX:+HeapDumpOnOutOfMemoryError -XX:+CrashOnOutOfMemoryError -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -XX:+UsePerfData -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener -XX:NativeMemoryTracking=detail -XX:+FlightRecorder --add-exports=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED -Djava.io.tmpdir=T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\scratch\0/java.io.tmpdir -Duser.home=T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\scratch\0/user.home -agentpath:c:\ade\mesos\work_dir\jib-master\install\2019-04-04-2151264.leonid.mesnik.ks-apps\windows-x64-debug.test\hotspot\jtreg\native\JvmtiStressModule.dll -Xverify:all -javaagent:redefineagent.jar applications.kitchensink.process.stress.Main T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink_java\scratch\0\kitchensink.final.properties
Host: Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 8 cores, 60G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.17415)
Time: Thu Apr 4 23:30:17 2019 ric elapsed time: 10 seconds (0d 0h 0m 10s)
--------------- T H R E A D ---------------
Current thread (0x0000000cbeb82000): VMThread "VM Thread" [stack: 0x0000000cbf5a0000,0x0000000cbf6a0000] [id=262900]
Stack: [0x0000000cbf5a0000,0x0000000cbf6a0000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xa6a3f1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
V [jvm.dll+0xc67901] VMError::report+0xea1 (vmerror.cpp:701)
V [jvm.dll+0xc69153] VMError::report_and_die+0x873 (vmerror.cpp:1490)
V [jvm.dll+0xc697d4] VMError::report_and_die+0x64 (vmerror.cpp:1288)
V [jvm.dll+0x4f0012] report_vm_error+0x102 (debug.cpp:264)
V [jvm.dll+0x890a1a] VM_RedefineClasses::CheckClass::do_klass+0x1fa (jvmtiredefineclasses.cpp:4282)
V [jvm.dll+0x42ee4c] ClassLoaderData::classes_do+0x3c (classloaderdata.cpp:320)
V [jvm.dll+0x4322b1] ClassLoaderDataGraph::classes_do+0xb1 (classloaderdatagraph.cpp:332)
V [jvm.dll+0x890c78] VM_RedefineClasses::doit+0x238 (jvmtiredefineclasses.cpp:254)
V [jvm.dll+0xc6aabe] VM_Operation::evaluate+0xbe (vmoperations.cpp:68)
V [jvm.dll+0xc6fad8] VMThread::evaluate_operation+0xb8 (vmthread.cpp:411)
V [jvm.dll+0xc7047d] VMThread::loop+0x50d (vmthread.cpp:558)
V [jvm.dll+0xc70e83] VMThread::run+0xc3 (vmthread.cpp:310)
V [jvm.dll+0xc06642] Thread::call_run+0x192 (thread.cpp:405)
V [jvm.dll+0xa68ebe] thread_native_entry+0x10e (os_windows.cpp:471)
C [ucrtbase.DLL+0x203ba]
C [KERNEL32.DLL+0x13d2]
C [ntdll.dll+0x154f4]
- backported by
-
JDK-8248098 ClassRedefinition crashes with: guarantee(false) failed: OLD and/or OBSOLETE method(s) found
-
- Resolved
-
-
JDK-8334967 ClassRedefinition crashes with: guarantee(false) failed: OLD and/or OBSOLETE method(s) found
-
- Resolved
-
-
JDK-8335319 ClassRedefinition crashes with: guarantee(false) failed: OLD and/or OBSOLETE method(s) found
-
- Resolved
-
- is blocked by
-
JDK-8078725 method adjustments can be done just once for all classes involved into redefinition
-
- Resolved
-
-
JDK-8221470 Print methods in exception messages in java-like Syntax.
-
- Resolved
-
- relates to
-
JDK-8245126 Kitchensink fails with: assert(!method->is_old()) failed: Should not be installing old methods
-
- Resolved
-
-
JDK-8245128 Kitchensink fails with: assert(destination == (address)-1 || destination == entry) failed: b) MT-unsafe modification of inline cache
-
- Resolved
-
-
JDK-8299727 crash with # Problematic frame: # V [libjvm.so+0x627e6c] ConstantPoolCache::adjust_method_entries(bool*)+0x4c
-
- Closed
-